:zap: 完善es脚本操作